@@ -8,7 +8,7 @@
 
 function test()
 {
-    InspectorTest.runAfterResourcesAreFinished(["dummy-iframe.html"], step1);
+    InspectorTest.runAfterResourcesAreFinished(["dummy-iframe.html", "resource-tree-document-url.html"], step1);
 
     function step1()
     {
