@@ -36,7 +36,7 @@ function test()
 
     function step2()
     {
-        InspectorTest.runAfterResourcesAreFinished(["resource-tree-frame-add-iframe.html", "styles-navigated.css"], step3);
+        InspectorTest.runAfterResourcesAreFinished(["resource-tree-frame-add-iframe.html", "styles-navigated.css", "script-navigated.js"], step3);
     }
 
     function step3()
