@@ -14,7 +14,7 @@ function test()
 
     function step1()
     {
-        InspectorTest.runAfterResourcesAreFinished(["resource-tree-reload-iframe.html"], step2);
+        InspectorTest.runAfterResourcesAreFinished(["resource-tree-reload-iframe.html", "script-initial.js", "styles-initial-2.css"], step2);
     }
 
     function step2()
